--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Shoot-m-up</title>
+  <title>Food Frenzy</title>
   <style>
   html, body {
     margin: 0;
